# astarte-device-sdk-rust

./: CHANGELOG.md  Cargo.toml  priv.key
.github/workflows/: check.yaml  ci.yaml  coverage.yaml  test.yaml
.reuse/: dep5
assets/diagrams/: connection-flow.d2  connection-sequence.d2
assets/test-keys/: ec-pub-key.params.hex
astarte-device-error/: Cargo.toml  README.md
astarte-device-error/src/: lib.rs
astarte-device-sdk-derive/: CHANGELOG.md  Cargo.toml
astarte-device-sdk-ffi/: Cargo.toml
astarte-device-sdk-ffi/astarte-device-sdk-python-ffi/: pyproject.toml
astarte-device-sdk-ffi/astarte-device-sdk-python-ffi/src/astarte_device_sdk_python_ffi/: __init__.py
astarte-interfaces/: Cargo.toml  README.md
astarte-interfaces/src/: error.rs  lib.rs  schema.rs
astarte-interfaces/src/interface/: mod.rs  name.rs  properties.rs  property.rs  reference.rs  validation.rs  version.rs
astarte-interfaces/src/interface/datastream/: individual.rs  mod.rs  object.rs
astarte-interfaces/src/mapping/: collection.rs  endpoint.rs  mod.rs  path.rs  properties.rs  property.rs
astarte-interfaces/src/mapping/datastream/: individual.rs  mod.rs  object.rs
benches/: benchmark.rs
docs/: connect-to-the-astarte-message-hub.md
migrations/: 20240513131630_retention.sql
snapshots/: astarte_device_sdk__transport__mqtt__encrypted__messages__tests__exchange_fail_roundrip-2.snap  astarte_device_sdk__transport__mqtt__encrypted__messages__tests__exchange_fail_roundrip.snap  astarte_device_sdk__transport__mqtt__encrypted__messages__tests__exchange_resp_roundrip-2.snap  astarte_device_sdk__transport__mqtt__encrypted__messages__tests__exchange_resp_roundrip.snap  astarte_device_sdk__transport__mqtt__encrypted__messages__tests__init_exchange_roundrip-2.snap  astarte_device_sdk__transport__mqtt__encrypted__messages__tests__init_exchange_roundrip.snap
src/: builder.rs  client.rs  connection.rs  error.rs  event.rs  interfaces.rs  introspection.rs  lib.rs  options.rs  properties.rs  state.rs  types.rs  validate.rs
(+77 files in other folders)
