[package]
name = "astarte-interfaces"
# Use a separate version and move quickly to 1.0.0
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["mqtt"]
mqtt = ["dep:rumqttc"]
# Keeps the order of the mappings
preserve_order = ["serde_json/preserve_order"]
interface-doc = []
interface-strict = []

[dependencies]
rumqttc = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
