[project]
name = "astarte-device-sdk-python-ffi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joshua Chapman", email = "joshua.chapman@joshuachp.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "cffi>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
